Fix Kruin tree undo and remove all warnings